# NumMethods

./: .gitignore  README.md
.gitignore/: .gitignore
LAB1/: CMakeLists.txt  outputMatrix.txt  outputVector.txt  test12_1M.txt  test15_1V.txt  test4m.txt  test4v.txt  test5v.txt
LAB1/.gitignore/: .gitignore
LAB1/include/: Gauss.h  QR.h  shared.h
LAB1/report/style/: .~lock.Manual-fn2kursstyle.doc#
LAB1/src/: Gauss.cpp  QR.cpp  main.cpp  shared.cpp
LAB1/tex/: report.aux  report.tex  report.toc  report_lab1.tex
LAB2/: inputMatrix.txt  inputVector.txt  outputMatrix.txt  outputVector.txt  st.sh
LAB2/include/: SOLE.h  shared.h
LAB2/src/: SOLE.cpp  main.cpp  shared.cpp
LAB2/tex/: report.aux  report.tex  геом.интрепр.doc
LAB3/: CMakeLists.txt
LAB3/include/: SOLE.h  shared.h
LAB3/src/: SOLE.cpp  main.cpp  shared.cpp
LAB4/: inputVector.txt  st.sh
LAB4/include/: SOLE.h  shared.h
LAB4/report/: report_lab_4.tex
LAB4/src/: SOLE.cpp  main.cpp  shared.cpp
LAB5/lab5 cmake/: testAS.txt
LAB5/lab5 cmake/src/: Source.cpp  main.cpp
LAB5/lab5_1/: Source.cpp  Source1.cpp  lab5_1.cpp  lab5_1.sln  lab5_1.vcxproj  lab5_1.vcxproj.filters
LAB5/lab5_1/Files/: 55.nb  Diagramma4Test2.0.txt  Diagramma5Test.txt  Diagramma5Test2.0.txt
SEM1/LAB1/: CMakeLists.txt  test12_1V.txt  test12_2M.txt  test12_2V.txt  test15_1M.txt  test15_2M.txt  test15_2V.txt  test1m.txt  test2m.txt  test3m.txt  test3v.txt  test5m.txt
SEM1/LAB1/include/: Gauss.h  QR.h
SEM1/LAB1/src/: main.cpp
SEM1/LAB2/: CMakeLists.txt  cp.sh  test2M.txt  test2V.txt
SEM1/LAB2/src/: SOLE.cpp
SEM1/LAB3/: cp.sh  outX.txt  outY.txt
SEM1/LAB3/src/: SOLE.cpp
SEM1/LAB4/: CMakeLists.txt
SEM1/LAB4/include/: SOLE.h  shared.h
SEM1/LAB4/src/: main.cpp  shared.cpp
SEM1/LAB5/lab5 cmake/: CMakeLists.txt  outputMatrix.txt  test12.txt
SEM1/LAB5/lab5 cmake/src/: Source1.cpp
SEM1/LAB5/lab5_1/: Source.cpp  main.cpp
SEM1/LAB5/lab5_1/Files/: Diagramma4Test.txt
SEM2/LAB1/: CMakeLists.txt  graph.nb  outTimeAndError.txt  outTimeAndStep.txt  st.sh  traektory.nb
SEM2/LAB1/data/: outMexplicitEuler.txt  outMimplicitEuler.txt  outMrungeKutta2.txt  outMrungeKutta4.txt  outMrungeKuttaRungeStep.txt  outMsymmetric.txt
SEM2/LAB1/include/: Euler.h  SOLE.h  nonLinearSolve.h  shared.h
SEM2/LAB1/src/: Euler.cpp  SOLE.cpp  main.cpp  nonLinearSolve.cpp  shared.cpp
SEM2/LAB2/: CMakeLists.txt  constTempMethod.txt  defaultMethod.txt  plot 2.nb  plot kvazi.nb  tempGraph.nb
SEM2/LAB2/data/: diff.csv  doublePt.txt  kvaziImplicit.txt  outMexplicitEuler.txt  outMrungeKutta2.txt  singlePt.txt  zeroPt.txt
SEM2/LAB2/include/: SOLE.h  nonLinearSolve.h  thermalConductivity.h
SEM2/LAB2/src/: main.cpp  nonLinearSolve.cpp  thermalConductivity.cpp
SEM2/LAB3/: CMakeLists.txt  outputMatrix.txt  plot.nb
SEM2/LAB3/data/: task1.txt  test2.txt  var13.txt
SEM2/LAB3/include/: SOLE.h  lab3.h
SEM2/LAB3/src/: lab3.cpp  main.cpp
SEM2/LAB4/: CMakeLists.txt
SEM2/LAB4/include/: SOLE.h  lab4.h  shared.h  test.h
SEM2/LAB4/output/: depGraph.nb  diffGraph.txt  graphData.txt  graphDataMany.txt  poisson_eq.nb
SEM2/LAB4/src/: SOLE.cpp  lab4.cpp  main.cpp  shared.cpp  test.cpp
SEM2/LAB5/: CMakeLists.txt
SEM2/LAB5/include/: SOLE.h  lab5.h  shared.h  test.h
SEM2/LAB5/output/: Rgraph.nb
SEM2/LAB5/src/: SOLE.cpp  lab5.cpp  main.cpp  shared.cpp  test.cpp
SEM2/LABA1/laba1/: Adams.txt  Euler_explicit.txt  Euler_implicit.txt  Prediction.txt  Runge_Kutta2.txt  Runge_Kutta4.txt  Symmetric.txt  diffure.h  laba1.cpp  laba1.sln  laba1.vcxproj  laba1.vcxproj.filters  main.h  matrix_operations.h
